--- a/node-server/package.json
+++ b/node-server/package.json
@@ -18,14 +18,17 @@
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.13",
+    "@types/supertest": "^6.0.3",
     "@types/yup": "^0.29.14",
     "jest": "^29.7.0",
     "prisma": "^6.5.0",
+    "supertest": "^7.1.0",
     "ts-jest": "^29.3.0",
     "tsx": "^4.19.3"
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
